# freeipmi-debian

./: .gbp.conf  Makefile.in  aclocal.m4  configure  configure.ac  freeipmi.spec
bmc-config/: Makefile.in  bmc-config.8  bmc-config.conf.5
bmc-device/: Makefile.in  bmc-device.8
bmc-info/: Makefile.in  bmc-info.8
bmc-watchdog/: Makefile.in  bmc-watchdog.8  bmc-watchdog.8.pre.in  freeipmi-bmc-watchdog.logrotate  freeipmi-bmc-watchdog.sysconfig
common/: Makefile.in
config/: ac_bmc_watchdog_logfile.m4  ac_dont_check_for_root.m4  ac_freeipmi_config_file.m4  ac_ipmi_monitoring_sdr_cache_dir.m4  ac_ipmi_monitoring_sensor_config_file.m4  ac_ipmidetect_config_file.m4  ac_ipmidetectd_config_file.m4  ac_lsh_gcc_attributes.m4  acx_pthread.m4  config.h.in
contrib/: Makefile.in
contrib/ganglia/: Makefile.am  Makefile.in
debian/: NEWS  TODO  TODO.org  changelog  control  copyright  freeipmi-bmc-watchdog.bmc-watchdog.init  freeipmi-bmc-watchdog.dirs  freeipmi-bmc-watchdog.install  freeipmi-bmc-watchdog.manpages  freeipmi-bmc-watchdog.postinst  freeipmi-bmc-watchdog.postrm  freeipmi-bmc-watchdog.preinst  freeipmi-common.docs  freeipmi-common.install  freeipmi-common.lintian-overrides  freeipmi-common.manpages  freeipmi-common.postrm  freeipmi-ipmidetect.install  freeipmi-ipmidetect.ipmidetectd.init  freeipmi-ipmidetect.manpages  freeipmi-ipmidetect.postrm  freeipmi-sel.install  freeipmi-sel.ipmiseld.default  freeipmi-sel.ipmiseld.init  freeipmi-tools.dirs  freeipmi-tools.docs  freeipmi-tools.install  freeipmi-tools.lintian-overrides  freeipmi-tools.manpages  freeipmi.docs  (+31 more)
(+373 files in other folders)
