##*****************************************************************************
## $Id: Makefile.am,v 1.3 2008/05/01 18:38:29 chu11 Exp $
##*****************************************************************************
## Process this file with automake to produce Makefile.in.
##*****************************************************************************

EXTRA_DIST = README ganglia_ipmi_sensors.pl ganglia_ipmimonitoring.pl
